[package]
name = "quick-macros"
version = "0.1.1"
edition = "2021"
authors = ["sobczal"]
license = "MIT"
description = "Crate providing simple useful macros"
repository = "https://github.com/sobczal2/quick-macros"
readme = "README.md"
keywords = ["macro", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.100", optional = true }
quote = { version = "1.0.40", optional = true }
proc-macro2 = { version = "1.0.94", optional = true }

[features]
default = []
full = ["derive"]
derive = ["dep:syn", "dep:quote", "dep:proc-macro2"]

[package.metadata.docs.rs]
all-features = true
