[package]
name = "quick-macros"
version = "0.1.2"
edition = "2024"
authors = ["Łukasz Sobczak"]
license = "MIT"
description = "Crate providing simple useful macros"
repository = "https://github.com/sobczal2/quick-macros"
readme = "README.md"
keywords = ["macro", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1.0.4" }
syn = { version = "2.0.100" }
quote = { version = "1.0.40" }
proc-macro2 = { version = "1.0.94" }

[package.metadata.docs.rs]
all-features = true
